bk_ida/gccida/c3/schedule_insns
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3401:1: error: use of undeclared identifier 'deps_0'
deps_0 *v14; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3401:9: error: use of undeclared identifier 'v14'
deps_0 *v14; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3406:1: error: use of undeclared identifier 'deps_0'
deps_0 *v19; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3406:9: error: use of undeclared identifier 'v19'
deps_0 *v19; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3697:4: error: expected ';' after expression
rtx headp; // [rsp+18h] [rbp-130h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3697:5: error: use of undeclared identifier 'headp'
rtx headp; // [rsp+18h] [rbp-130h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3714:1: error: use of undeclared identifier 'deps_0'
deps_0 deps; // [rsp+A0h] [rbp-A8h] BYREF 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3716:4: error: expected ';' after expression
rtx tailp[7]; // [rsp+110h] [rbp-38h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3716:5: error: use of undeclared identifier 'tailp'
rtx tailp[7]; // [rsp+110h] [rbp-38h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:3765:19: error: expected identifier or '('
 struct edge_list = create_edge_list( ); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:4547:17: error: expected expression
v14 = ( deps_0 *)xmalloc( 104LL * ( int)current_nr_blocks); 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:4547:9: error: use of undeclared identifier 'deps_0'
v14 = ( deps_0 *)xmalloc( 104LL * ( int)current_nr_blocks); 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:4547:1: error: use of undeclared identifier 'v14'
v14 = ( deps_0 *)xmalloc( 104LL * ( int)current_nr_blocks); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:4548:11: error: use of undeclared identifier 'v14'
bb_deps = v14; 
          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:4551:12: error: use of undeclared identifier 'v14'
init_deps( v14); 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:4571:1: error: must use 'struct' tag to refer to type 'deps'
deps.reg_last_in_use = bb_deps[v18].reg_last_in_use; 
^
struct 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:4571:5: error: expected identifier or '('
deps.reg_last_in_use = bb_deps[v18].reg_last_in_use; 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:4572:12: error: expected expression
*( _OWORD *)&deps.in_post_call_group_p = *( _OWORD *)&bb_deps[v18].in_post_call_group_p; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/sched-rgn.c:4572:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&deps.in_post_call_group_p = *( _OWORD *)&bb_deps[v18].in_post_call_group_p; 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_insns/src/obj/sched-rgn.o] Error 1
